--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "homepage": "https://khethelogp.github.io/react-calculator-app/",
+  "homepage": "https://varshithvhegde.github.io/react_calculator/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
